update with custom android mouse support

--- a/Project1-android/project.properties
+++ b/Project1-android/project.properties
@@ -9,3 +9,5 @@
 
 # Project target.
 target=android-17
+#android.library.reference.1=/storage/sdcard0/AppProjects/libgdx/extensions/gdx-controllers/gdx-controllers
+#android.library.reference.2=/storage/sdcard0/AppProjects/libgdx/extensions/gdx-controllers/gdx-controllers-android
